--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -1,5 +1,5 @@
 ---
-apiVersion: v1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: wordpress-app
@@ -15,13 +15,10 @@ spec:
     spec:
       containers:
       - name: wordpress
-        image: wordpress:5.4.2-php7.2-fpm-alpine
+        image: wordpress:latest
         env:
         - name: WORDPRESS_DB_HOST
-          valueFrom:
-            secretKeyRef:
-              name: wordpress-secret
-              key: WORDPRESS_DB_HOST
+          value: mysql-svc
         - name: WORDPRESS_DB_USER
           valueFrom:
             secretKeyRef:
@@ -43,7 +40,7 @@ spec:
               name: wordpress-secret
               key: WORDPRESS_TABLE_PREFIX
 ---
-apiVersion: v1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mysql-app
@@ -72,4 +69,5 @@ spec:
               key: MYSQL_ROOT_PASSWORD
         volumeMounts:
         - name: mysql-data
-          mountPath: "/var/lib/mysql"
+          mountPath: /var/lib/mysql
+          subPath: mysql
